--- a/lib/exp-datepicker/exp-datepicker.html
+++ b/lib/exp-datepicker/exp-datepicker.html
@@ -1,11 +1,18 @@
-<a class="exp-date-picker" dialog close-by-click="false"><i class="ion ion-ios-calendar-outline"></i>
+<a class="exp-date-picker"
+  dialog
+  close-by-click="false">
+  <i class="fa fa-calendar-o"></i>
   <dialog-content>
     <div class="exp-datepicker">
       <div class="months">
-        <div ng-repeat="month in vm.list.months" ng-click="vm.selectMonth($event)" ng-class="{'show' : vm.month == month} ">{{month}}</div>
+        <div ng-repeat="month in vm.list.months"
+          ng-click="vm.selectMonth($event)"
+          ng-class="{'show' : vm.month == month} ">{{month}}</div>
       </div>
       <div class="years">
-        <div ng-repeat="year in vm.list.years" ng-click="vm.selectYear($event)" ng-class="{'show' : vm.year == year}">{{year}}</div>
+        <div ng-repeat="year in vm.list.years"
+          ng-click="vm.selectYear($event)"
+          ng-class="{'show' : vm.year == year}">{{year}}</div>
       </div>
     </div>
   </dialog-content>
