--- a/src/custom-input/custom-input.html
+++ b/src/custom-input/custom-input.html
@@ -21,8 +21,7 @@
         ng-required="vm.required">{{vm.placeholder}}</textarea>
     </div>
     <div ng-if="vm.type == 'datepicker'">
-      <datepicker ng-init="vm.getCurrentDate()"
-        date="vm.model"
+      <datepicker date="vm.model"
         disabled="vm.disabled">
         <input ng-if="!vm.$transclude.isSlotFilled('input') "
           class='datepicker-input'
